--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www",
+    "dev": "cross-env NODE_ENV=development yarn start",
+    "debug": "cross-env DEBUG=server:* yarn dev"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
@@ -14,5 +17,9 @@
     "morgan": "~1.9.1",
     "pg": "^7.18.2",
     "sequelize": "^5.21.5"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.0",
+    "dotenv": "^8.2.0"
   }
 }
