--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "seeding.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.18.2",
     "sequelize": "^5.21.5"
