--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "seeding.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "pg": "^7.18.2",
     "sequelize": "^5.21.5"
   }
