--- a/server/config/config.json
+++ b/server/config/config.json
@@ -4,7 +4,6 @@
     "password": "postgres",
     "database": "liveCodeMovie",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "operatorsAliases": false
+    "dialect": "postgres"
   }
 }
