Hafizul Rifki Hawari

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "live_code2_movies",
+    "database": "p2_final_lc",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
